[package]
name = "pomodoro-sni"
version = "0.1.0"
edition = "2024"
default-run = "pomodoro-sni"

[features]
test-timer = []

[dependencies]
thiserror = "2.0.18"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
async-channel = "2.5.0"
log = "0.4.29"
zbus = "5.14.0"
indexmap = "2.13.0"
smol = "2.0.2"
dialoguer = { version = "0.12.0", default-features = false }
serde = "1.0.228"
rodio = { version = "0.22.1", default-features = false, features = [
    "wav",
    "playback",
] }
simple_logger = "5.2.0"
lexopt = "0.3.2"
etcetera = "0.11.0"
which = "8.0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get --assume-yes install libasound2-dev"]
